--- a/AUTHORS
+++ b/AUTHORS
@@ -1,10 +1,10 @@
 Autorzy Kadu:
 
 Tomek Jarzynka <tomee at cpi dot pl>
-Pomys³odawca, koordynator, g³ówny programista
+twórca projektu, koordynator, programista
 
 Tomek Chiliñski <chilek at chilan dot com>
-g³ówny programista
+programista, opiekun serwera kadu.net
 
 Adrian Smarzewski <adrians at aska dot com dot pl>
-pomoc programistyczna, wersja polska
+programista, twórca wersji polskiej
