Jakies kosmetyczne poprawki
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@223 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/INSTALL
+++ b/INSTALL
@@ -1,8 +1,11 @@
 Instrukcja instalacji dla wersji 0.3.0 lub nowszej
 
+Aby zainstalowaæ Kadu ze ¼róde³, spróbuj u¿yæ kreatora: ./setup
+
+W przeciwnym wypadku:
 1. w kadu zrobiæ ./configure ; make i modliæ siê, ¿eby przesz³o ;>
    ewentualnie posi³kowaæ siê np. --with-qt-dir=/¶cie¿ka
-3. jako root make install i zapamiêtaæ, gdzie co le¿y, ¿eby potem wpisaæ do
+2. jako root make install i zapamiêtaæ, gdzie co le¿y, ¿eby potem wpisaæ do
    konfiga.
 
 proste? proste ;>
