I znów kosmetyczne zmiany :)
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@225 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/TODO
+++ b/TODO
@@ -5,6 +5,8 @@
 ? :: Jeszcze siê zastanawiam
 ! :: _MUSI_ byæ
 
+(TODO mo¿e byæ "trochê" nieaktualne... zapraszamy na kadu.net/forum)
+
  ! przetestowaæ wysy³anie plików
  ? naprawiæ ikonkê w dock menu
  ? dodaæ wiêcej funkcji do dock menu (szukaj, dodaj, usuñ, odbierz)
