Dopisalem sobie, ze jestem grafikiem :P
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@226 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,7 @@
 Autorzy Kadu:
 
 Tomek Jarzynka <tomee at cpi dot pl>
-twórca projektu, koordynator, programista
+twórca projektu, koordynator, programista, grafik
 
 Tomek Chiliñski <chilek at chilan dot com>
 programista, opiekun serwera kadu.net
