--- a/ChangeLog
+++ b/ChangeLog
@@ -1,13 +1,10 @@
-* CVS!
-* zmiany w metodach eventGot... (Chilek)
-* dodanie obs³ugi w³asnego opisowego (Chilek)
-* mo¿liwo¶æ wyboru statusu (tylko dla znajomych) (Chilek)
 
 +++ wersja 0.3.3
 * automatyczna kompilacja programu sms
 * porz±dki w opcji wysy³ania sms: brak opcji, je¶li osoba nie ma
   numeru, osobna opcja w menu g³ównym do wysy³ania sms'a pod wpisany z
   klawiatury numer.
+* ustawienia kolorów i czcionek listy u¿ytkowników i okna rozmowy
 
 +++ wersja 0.3.2
 * dalsze porz±dki w kodzie
@@ -18,6 +15,11 @@
 * czê¶ciowe uporz±dkowanie kodu
 * przesy³anie plików (DCC)
 * sporo drobiazgów
+
+* CVS!
+* zmiany w metodach eventGot... (Chilek)
+* dodanie obs³ugi w³asnego opisowego (Chilek)
+* mo¿liwo¶æ wyboru statusu (tylko dla znajomych) (Chilek)
 
 +++ wersja 0.3.0 :: 05/06/2002
 * domy¶lnie status tylko-dla-znajomych
