--- a/README
+++ b/README
@@ -1,12 +1,8 @@
-Kadu, klient Gadu-Gadu dla KDE, wersja 0.3.1 (lub nowsza)
-
-+++ ZMIANY W 0.3.1
-Ca³a masa poprawek stabilno¶ci, poza tym obs³uga po³±czeñ
-bezpo¶rednich.
+Kadu, klient Gadu-Gadu dla KDE, wersja 0.3.3 (lub nowsza)
 
 +++ WYMAGANIA
  * Qt-3.0.x (pisano na 3.0.4)
- * KDE-3.x (pisa³em na 3.0)
+ * KDE-3.x (pisano na 3.0)
 
 +++ FICZERSY
  * status: offline, online, away, invisible
